# syncd

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  install.sh  requirements.txt  sync_daemon.cpp  sync_daemon.py  sync_daemon.yaml  sync_daemon_linux.cpp  syncd.1  syncd.cpp  syncd.rb  syncd.yaml  syncdctl
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
